--- a/css/owl.theme.default.css
+++ b/css/owl.theme.default.css
@@ -14,7 +14,7 @@
 	right: 1%;
 }
 .owl-theme .owl-nav {
-  margin-top: 10px;
+  margin-bottom: 10px;
   text-align: center;
   -webkit-tap-highlight-color: transparent; }
   .owl-theme .owl-nav [class*='owl-'] {
