--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@ hr.short {
   background-color: #f5bc04;
   margin-left: 10px;
 }
+.hr-short-margin {
+  margin-left: 0 !important;
+}
 .nav-tabs .nav-link.active,
 .nav-tabs .nav-item.show .nav-link {
   color: #464a4c;
@@ -768,8 +771,13 @@ hr.short {
 #fh5co_contact_form textarea:focus {
   border-color: #f5bc04;
 }
-.contact_us_bg_img {
-  background: url(../images/photo-1449157291145-7efd050a4d0e-578x362.jpg);
+.player_bg_img {
+  background: url(../images/player-banner.jpg);
+  padding: 100px 0;
+  background-size: cover;
+}
+.game_bg_img {
+  background: url(../images/game-banner.jpg);
   padding: 100px 0;
   background-size: cover;
 }
@@ -1048,17 +1056,31 @@ hr.short {
   background-repeat: no-repeat;
   background-position: center center;
 }
+#fh5co-background-box {
+  width: 100%;
+  height: 660px;
+  z-index: -555;
+  background-color: #333;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
 .single #fh5co-title-box {
   position: relative;
-  height: 800px;
-  width: 100%;
+  height: 500px;
+  /* width: 100%; */
+  width: 1000px;
+  height: 660px;
+  margin: 0 auto;
+  padding-top: 30px;
 }
 #fh5co-title-box .overlay {
   position: absolute;
-  top: 0;
+  /* top: 0;
   bottom: 0;
   left: 0;
-  right: 0;
+  right: 0; */
+  margin: 0 auto;
   z-index: 10;
   background: rgba(0, 0, 0, 0.5);
 }
