--- a/style.css
+++ b/style.css
@@ -2,14 +2,105 @@
 body {
   background-color: #eee;
 }
+/* CALENDAR */
+
+* {box-sizing: border-box;}
+ul {list-style-type: none;}
+
+.month {
+  padding: 20px 25px;
+  width: 100%;
+  background: #afafaf;
+  text-align: center;
+}
+
+.month ul {
+  margin: 0;
+  padding: 0;
+}
+
+.month ul li {
+  color: white;
+  font-size: 20px;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+}
+
+.month .prev {
+  float: left;
+  padding-top: 10px;
+}
+
+.month .next {
+  float: right;
+  padding-top: 10px;
+}
+
+.weekdays {
+  margin: 0;
+  padding: 10px 0;
+  background-color: #ddd;
+}
+
+.weekdays li {
+  display: inline-block;
+  width: 13.6%;
+  color: #666;
+  text-align: center;
+}
+
+.days {
+  padding: 10px 0;
+  background: #eee;
+  margin: 0;
+}
+
+.days li {
+  list-style-type: none;
+  display: inline-block;
+  width: 13.6%;
+  text-align: center;
+  margin-bottom: 5px;
+  font-size:12px;
+  color: #777;
+  line-height: 50px;
+
+}
+
+.days li .active {
+  padding: 15px;
+  background: #f5bc04;
+  color: white !important
+}
+
+/* Add media queries for smaller screens */
+@media screen and (max-width:720px) {
+  .weekdays li, .days li {width: 13.1%;}
+}
+
+@media screen and (max-width: 420px) {
+  .weekdays li, .days li {width: 12.5%;}
+  .days li .active {padding: 2px;}
+}
+
+@media screen and (max-width: 290px) {
+  .weekdays li, .days li {width: 12.2%;}
+}
+
+/* CALENDAR */
+
 .gradient {
   -webkit-box-shadow: inset 50px -180px 120px -185px #9d9d9d;
   -moz-box-shadow: inset 50px -180px 120px -185px #9d9d9d;
   box-shadow: inset 50px -180px 120px -185px #9d9d9d;
   padding: 0 !important;
 }
+a {
+  color: #333;
+}
 a:hover {
   color: #f5bc04;
+  text-decoration: none;
 }
 .fh5co_header_bg {
   background: #222;
@@ -456,6 +547,7 @@ hr.short {
   color: #f5bc04;
 }
 .fh5co_small_post_heading {
+  margin-top: 15px;
   font-size: 17px;
   color: #424040;
   -moz-transition: all all 0.5s ease;
@@ -773,7 +865,7 @@ hr.short {
 }
 .player_bg_img {
   background: url(../images/player-banner.jpg);
-  padding: 100px 0;
+  /* padding: 100px 0; */
   background-size: cover;
 }
 .game_bg_img {
@@ -782,9 +874,10 @@ hr.short {
   background-size: cover;
 }
 .fh5co_con {
-  font-size: 24px;
+  padding-left: 30px;
+  font-size: 44px;
   color: #fff;
-  font-weight: 800;
+  font-weight: 300;
   text-decoration: none;
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
@@ -792,13 +885,13 @@ hr.short {
   -ms-transition: all 0.5s ease;
   transition: all 0.5s ease;
 }
-.fh5co_con:hover,
+/* .fh5co_con:hover,
 .fh5co_con:focus {
   text-decoration: none;
   font-size: 24px;
   color: #f5bc04;
   font-weight: 800;
-}
+} */
 .fh5co_con_123 {
   border: 1px solid #fff !important;
   color: #fff !important;
@@ -841,6 +934,11 @@ hr.short {
 .fh5co_heading {
   font-size: 24px;
   color: #222;
+}
+.fh5co_heading:hover,
+.fh5co_heading:focus {
+  font-size: 24px;
+  color: #333; 
 }
 .fh5co_contact_us_no_icon_div {
   height: 50px;
@@ -1050,7 +1148,7 @@ hr.short {
   opacity: 0;
 }
 #fh5co-title-box {
-  width: 38.2%;
+  width: 1000px;
   z-index: 555;
   background-size: cover;
   background-repeat: no-repeat;
@@ -1060,26 +1158,22 @@ hr.short {
   width: 100%;
   height: 660px;
   z-index: -555;
-  background-color: #333;
+  background-color: #222;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
 }
 .single #fh5co-title-box {
   position: relative;
-  height: 500px;
-  /* width: 100%; */
-  width: 1000px;
   height: 660px;
   margin: 0 auto;
-  padding-top: 30px;
 }
 #fh5co-title-box .overlay {
   position: absolute;
-  /* top: 0;
+  top: 0;
   bottom: 0;
   left: 0;
-  right: 0; */
+  right: 0;
   margin: 0 auto;
   z-index: 10;
   background: rgba(0, 0, 0, 0.5);
