--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:100,300,400,500,600");
 body {
   background-color: #eee;
+  padding-top: 70px;
 }
 
 @media screen and (max-width: 500px) {
@@ -330,6 +331,11 @@ hr.short {
 }
 .fh5co_padd_mediya {
   /* padding-top: 10px; */
+  z-index: 10000;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  background-color: #fff;
 }
 .fh5co_suceefh5co_height {
   height: 550px;
@@ -1191,8 +1197,8 @@ hr.short {
   background-position: center center;
 }
 #fh5co-background-box {
-  width: 100%;
-  height: 660px;
+  /* width: 100%; */
+  height: 500px;
   z-index: -555;
   background-color: #222;
   background-size: cover;
@@ -1201,7 +1207,7 @@ hr.short {
 }
 .single #fh5co-title-box {
   position: relative;
-  height: 660px;
+  height: 500px;
   margin: 0 auto;
 }
 #fh5co-title-box .overlay {
