--- a/style.css
+++ b/style.css
@@ -351,7 +351,7 @@ hr.short {
   height: 560px;
   width: 100%;
 }
-.paddding {
+.padding {
   padding-left: 0 !important;
   padding-right: 0 !important;
 }
@@ -551,28 +551,14 @@ hr.short {
   }
 }
 .fh5co_news_img {
-  height: 200px;
-  /* -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  border-radius: 5px; */
   overflow: hidden;
   position: relative;
   top: 0;
-  /* -webkit-box-shadow: inset 0 2px 3px 1px;
-  -moz-box-shadow: inset 0 2px 3px 1px;
-  -o-box-shadow: inset 0 2px 3px 1px;
-  box-shadow: inset 0 2px 3px 1px;
-  -moz-transition: all all 0.5s ease;
-  -o-transition: all all 0.5s ease;
-  -webkit-transition: all all 0.5s ease;
-  -ms-transition: all all 0.5s ease;
-  transition: all all 0.5s ease; */
 }
-.fh5co_news_img > img {
-  width: 445px;
-  height: 200px;
-  min-width: 100%;
+.fh5co_news_img > .blank {
+  width: 100%;
+  padding-top: 56.25%;
+  background-color: #9d9d9d;
 }
 .c_b {
   color: #424040;
