--- a/ppa/css/bootstrap.css
+++ b/ppa/css/bootstrap.css
@@ -3710,7 +3710,7 @@ tbody.collapse.show {
   margin-left: 0;
 }
 
-.custom-select {
+/* .custom-select {
   display: inline-block;
   max-width: 100%;
   height: calc(2.25rem + 2px);
@@ -3751,7 +3751,7 @@ tbody.collapse.show {
   padding-top: 0.375rem;
   padding-bottom: 0.375rem;
   font-size: 75%;
-}
+} */
 
 .custom-file {
   position: relative;
