--- a/ppa/style.css
+++ b/ppa/style.css
@@ -19,6 +19,14 @@ body {
     float: left;
   }
 }
+.view-all-btn {
+  border: 1px solid #9d9d9d;
+  color: #3b3b3b;
+  padding: 15px;
+  text-align: center;
+  width: 150px;
+  margin-top: 30px;
+}
 .form-control {
   display: block;
   width: 100%;
